CU-3c04h09 - bugfix, fix responsiveness of add analysis stepper on mobile~

--- a/src/pages/Modals/Modals.css
+++ b/src/pages/Modals/Modals.css
@@ -94,7 +94,6 @@
   }
 }
 
-
 .modal_form_input {
   background-color: #f6f6f6;
   color: #0d0d0d;
@@ -118,7 +117,6 @@
   border-radius: 5px 5px 5px 5px;
 }
 
-
 .modal_form_input:focus {
   background-color: #fff;
   border-bottom: 2px solid #42a7df;
@@ -126,4 +124,44 @@
 
 .modal_form_input:placeholder {
   color: #cccccc;
+}
+
+.analysis_form_input {
+  background-color: #f6f6f6;
+  color: #0d0d0d;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-top: 3px;
+  margin-right: 3px;
+  margin-bottom: 3px;
+  margin-left: 30px;
+  width: 85%;
+  border: 2px solid #f6f6f6;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+.analysis_form_input:focus {
+  background-color: #fff;
+  border-bottom: 2px solid #42a7df;
+}
+
+.analysis_form_input:placeholder {
+  color: #cccccc;
+}
+
+@media screen and (max-width: 599.99px) {
+  .analysis_form_input {
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+  }
 }
